--- a/app/public/wp-content/plugins/newtheme-blank-finalizado/admin/sass/new-admin.scss
+++ b/app/public/wp-content/plugins/newtheme-blank-finalizado/admin/sass/new-admin.scss
@@ -1,6 +1,6 @@
-.preload {
+.preload{
     position: absolute;
-    background: rbga($color: #fff, $alpha: 0.75);
+    background: rgba($color: #fff, $alpha: 0.75);
     width: 100%;
     height: 100%;
     top: 0;
@@ -10,53 +10,35 @@
     align-items: center;
     display: none;
 }
-
-.marcoImagen {
+.marcoImagen{
     width: 80px;
     height: 80px;
     overflow: hidden;
     border-radius: 50%;
     position: relative;
-
-    img {
+    img{
         width: 90px;
         position: absolute;
         top: 50%;
         left: 50%;
-        transform: translate(-50%, -50%);
+        transform: translate( -50%, -50% );
     }
 }
-
-.new_media_img {
+.new_media_img{
     width: 50px;
     height: 50px;
     border-radius: 50%;
 }
-
-/* Animación user */
-.bg-animado {
+//Animacion user
+.bg-animado{
     animation: bganimado 3s;
     -webkit-animation: bganimado 3s;
 }
-
-@keyframes bganimado {
-    0% {
-        background: rbg(255, 172, 237);
-    }
-
-    100% {
-        background: transparent;
-    }
+@keyframes bganimado{
+    0%{ background: rgb(255, 172, 237); }
+    100%{ background: transparent; }
 }
-
-@-webkit-keyframes bganimado {
-    0% {
-        background: rgb(255, 172, 237)
-    }
-
-    ;
-
-    100% {
-        background: transparent;
-    }
+@-webkit-keyframes bganimado{
+    0%{ background: rgb(255, 172, 237); }
+    100%{ background: transparent; }
 }
