--- a/app/public/wp-content/plugins/newtheme-blank/admin/css/new-admin.css
+++ b/app/public/wp-content/plugins/newtheme-blank/admin/css/new-admin.css
@@ -1,46 +1,64 @@
 .preload {
-  position: absolute;
-  background: rgba(255, 255, 255, 0.75);
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  z-index: 10;
-  justify-content: center;
-  align-items: center;
-  display: none; }
+    position: absolute;
+    background: rbga($color: #fff, $alpha: 0.75);
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    z-index: 10;
+    justify-content: center;
+    align-items: center;
+    display: none;
+}
 
 .marcoImagen {
-  width: 80px;
-  height: 80px;
-  overflow: hidden;
-  border-radius: 50%;
-  position: relative; }
-  .marcoImagen img {
-    width: 90px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%); }
+    width: 80px;
+    height: 80px;
+    overflow: hidden;
+    border-radius: 50%;
+    position: relative;
+
+    img {
+        width: 90px;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+    }
+}
 
 .new_media_img {
-  width: 50px;
-  height: 50px;
-  border-radius: 50%; }
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+}
 
+/* Animación user */
 .bg-animado {
-  animation: bganimado 3s;
-  -webkit-animation: bganimado 3s; }
+    animation: bganimado 3s;
+    -webkit-animation: bganimado 3s;
+}
 
 @keyframes bganimado {
-  0% {
-    background: #ffaced; }
-  100% {
-    background: transparent; } }
+    0% {
+        background: rbg(255, 172, 237);
+    }
+
+    100% {
+        background: transparent;
+    }
+}
+
 @-webkit-keyframes bganimado {
-  0% {
-    background: #ffaced; }
-  100% {
-    background: transparent; } }
+    0% {
+        background: rgb(255, 172, 237)
+    }
+
+    ;
+
+    100% {
+        background: transparent;
+    }
+}
 
 /*# sourceMappingURL=new-admin.css.map */
